# timegrapher

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  test_wire.cpp
include/: matplotlibcpp.h
lib/include/: gnuplot-iostream.h
lib/portaudio/: CMakeLists.txt
lib/portaudio/examples/: paex_read_write_wire.c  paex_record.c
